# HomeWork_web_1

./: Index_1.html  Index_2.html  Index_3.html  Index_4.html  main.py  pyproject.toml
